tests/fixtures/errors/cyclic_reference.lazy
// error: Cyclic reference
//   --> tests/fixtures/errors/cyclic_reference.lazy:11:9
//    |
// 11 | obj = { x: obj.x + 1 }
//    |         ^-----------
//
// A cyclic reference was detected during evaluation. This usually means a value depends on itself in an invalid way.
//
// help: Check for circular dependencies in your definitions.

obj = { x: obj.x + 1 }
obj.x
